fix: change title projects to uppercase

--- a/src/i18n/messages/en-us.json
+++ b/src/i18n/messages/en-us.json
@@ -37,7 +37,7 @@
       "button": "Go to summary"
     },
     "ProjectsSection": {
-      "title": "Projects",
+      "title": "PROJECTS",
       "portfolio-v1-name": "Portfolio V1",
       "portfolio-v1-text": "My first version of the portfolio, where I present initial projects, skills in development and a little about my professional trajectory.",
       "barberize-name": "Barberize",
