--- a/src/i18n/messages/pt-br.json
+++ b/src/i18n/messages/pt-br.json
@@ -37,7 +37,7 @@
       "button": "Ir para resumo"
     },
     "ProjectsSection": {
-      "title": "Projetos",
+      "title": "PROJETOS",
       "portfolio-v1-name": "Portfólio V1",
       "portfolio-v1-text": "Minha primeira versão do portfólio, onde apresento projetos iniciais, habilidades em desenvolvimento e um pouco sobre minha trajetória profissional.",
       "barberize-name": "Barberize",
